api: refine payable account representation
